crates/ty_python_semantic/resources/mdtest/snapshots/stdlib_typing_aliase…_-_Typing-module_aliase…_-_Incorrect_number_of_…_(7900e15083808a57).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: stdlib_typing_aliases.md - Typing-module aliases to other stdlib classes - Incorrect number of type arguments
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/stdlib_typing_aliases.md
---

# Python source files

## mdtest_snippet.py

```
 1 | import typing
 2 | 
 3 | def f(
 4 |     # error: [invalid-type-form]
 5 |     incorrect_list: typing.List[int, int],
 6 |     # error: [invalid-type-form]
 7 |     incorrect_dict: typing.Dict[int, int, int],
 8 |     # error: [invalid-type-form]
 9 |     incorrect_set: typing.Set[int, int],
10 |     # error: [invalid-type-form]
11 |     incorrect_frozen_set: typing.FrozenSet[int, int],
12 |     # error: [invalid-type-form]
13 |     incorrect_chain_map: typing.ChainMap[int, int, int],
14 |     # error: [invalid-type-form]
15 |     incorrect_counter: typing.Counter[int, int],
16 |     # error: [invalid-type-form]
17 |     incorrect_default_dict: typing.DefaultDict[int, int, int],
18 |     # error: [invalid-type-form]
19 |     incorrect_deque: typing.Deque[int, int],
20 |     # error: [invalid-type-form]
21 |     incorrect_ordered_dict: typing.OrderedDict[int, int, int],
22 | ):
23 |     reveal_type(incorrect_list)  # revealed: list[Unknown]
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
31 |     reveal_type(incorrect_ordered_dict)  # revealed: OrderedDict[Unknown, Unknown]
```

# Diagnostics

```
error[invalid-type-form]: Legacy alias `typing.List` expected exactly 1 arguments, got 2
 --> src/mdtest_snippet.py:5:21
  |
3 | def f(
4 |     # error: [invalid-type-form]
5 |     incorrect_list: typing.List[int, int],
  |                     ^^^^^^^^^^^^^^^^^^^^^
6 |     # error: [invalid-type-form]
7 |     incorrect_dict: typing.Dict[int, int, int],
  |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Legacy alias `typing.Dict` expected exactly 2 arguments, got 3
 --> src/mdtest_snippet.py:7:21
  |
5 |     incorrect_list: typing.List[int, int],
6 |     # error: [invalid-type-form]
7 |     incorrect_dict: typing.Dict[int, int, int],
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |     # error: [invalid-type-form]
9 |     incorrect_set: typing.Set[int, int],
  |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Legacy alias `typing.Set` expected exactly 1 arguments, got 2
  --> src/mdtest_snippet.py:9:20
   |
 7 |     incorrect_dict: typing.Dict[int, int, int],
 8 |     # error: [invalid-type-form]
 9 |     incorrect_set: typing.Set[int, int],
   |                    ^^^^^^^^^^^^^^^^^^^^
10 |     # error: [invalid-type-form]
11 |     incorrect_frozen_set: typing.FrozenSet[int, int],
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Legacy alias `typing.FrozenSet` expected exactly 1 arguments, got 2
  --> src/mdtest_snippet.py:11:27
   |
 9 |     incorrect_set: typing.Set[int, int],
10 |     # error: [invalid-type-form]
11 |     incorrect_frozen_set: typing.FrozenSet[int, int],
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |     # error: [invalid-type-form]
13 |     incorrect_chain_map: typing.ChainMap[int, int, int],
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Legacy alias `typing.ChainMap` expected exactly 2 arguments, got 3
  --> src/mdtest_snippet.py:13:26
   |
11 |     incorrect_frozen_set: typing.FrozenSet[int, int],
12 |     # error: [invalid-type-form]
13 |     incorrect_chain_map: typing.ChainMap[int, int, int],
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |     # error: [invalid-type-form]
15 |     incorrect_counter: typing.Counter[int, int],
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Legacy alias `typing.Counter` expected exactly 1 arguments, got 2
  --> src/mdtest_snippet.py:15:24
   |
13 |     incorrect_chain_map: typing.ChainMap[int, int, int],
14 |     # error: [invalid-type-form]
15 |     incorrect_counter: typing.Counter[int, int],
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^
16 |     # error: [invalid-type-form]
17 |     incorrect_default_dict: typing.DefaultDict[int, int, int],
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Legacy alias `typing.DefaultDict` expected exactly 2 arguments, got 3
  --> src/mdtest_snippet.py:17:29
   |
15 |     incorrect_counter: typing.Counter[int, int],
16 |     # error: [invalid-type-form]
17 |     incorrect_default_dict: typing.DefaultDict[int, int, int],
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
18 |     # error: [invalid-type-form]
19 |     incorrect_deque: typing.Deque[int, int],
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Legacy alias `typing.Deque` expected exactly 1 arguments, got 2
  --> src/mdtest_snippet.py:19:22
   |
17 |     incorrect_default_dict: typing.DefaultDict[int, int, int],
18 |     # error: [invalid-type-form]
19 |     incorrect_deque: typing.Deque[int, int],
   |                      ^^^^^^^^^^^^^^^^^^^^^^
20 |     # error: [invalid-type-form]
21 |     incorrect_ordered_dict: typing.OrderedDict[int, int, int],
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Legacy alias `typing.OrderedDict` expected exactly 2 arguments, got 3
  --> src/mdtest_snippet.py:21:29
   |
19 |     incorrect_deque: typing.Deque[int, int],
20 |     # error: [invalid-type-form]
21 |     incorrect_ordered_dict: typing.OrderedDict[int, int, int],
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | ):
23 |     reveal_type(incorrect_list)  # revealed: list[Unknown]
   |
info: rule `invalid-type-form` is enabled by default

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:23:5
   |
21 |     incorrect_ordered_dict: typing.OrderedDict[int, int, int],
22 | ):
23 |     reveal_type(incorrect_list)  # revealed: list[Unknown]
   |     ^^^^^^^^^^^
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:23:17
   |
21 |     incorrect_ordered_dict: typing.OrderedDict[int, int, int],
22 | ):
23 |     reveal_type(incorrect_list)  # revealed: list[Unknown]
   |                 ^^^^^^^^^^^^^^ `list[Unknown]`
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
   |

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:24:5
   |
22 | ):
23 |     reveal_type(incorrect_list)  # revealed: list[Unknown]
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
   |     ^^^^^^^^^^^
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:24:17
   |
22 | ):
23 |     reveal_type(incorrect_list)  # revealed: list[Unknown]
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
   |                 ^^^^^^^^^^^^^^ `dict[Unknown, Unknown]`
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
   |

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:25:5
   |
23 |     reveal_type(incorrect_list)  # revealed: list[Unknown]
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
   |     ^^^^^^^^^^^
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:25:17
   |
23 |     reveal_type(incorrect_list)  # revealed: list[Unknown]
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
   |                 ^^^^^^^^^^^^^ `set[Unknown]`
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
   |

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:26:5
   |
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
   |     ^^^^^^^^^^^
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:26:17
   |
24 |     reveal_type(incorrect_dict)  # revealed: dict[Unknown, Unknown]
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
   |                 ^^^^^^^^^^^^^^^^^^^^ `frozenset[Unknown]`
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
   |

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:27:5
   |
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
   |     ^^^^^^^^^^^
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:27:17
   |
25 |     reveal_type(incorrect_set)  # revealed: set[Unknown]
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
   |                 ^^^^^^^^^^^^^^^^^^^ `ChainMap[Unknown, Unknown]`
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
   |

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:28:5
   |
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
   |     ^^^^^^^^^^^
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:28:17
   |
26 |     reveal_type(incorrect_frozen_set)  # revealed: frozenset[Unknown]
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
   |                 ^^^^^^^^^^^^^^^^^ `Counter[Unknown]`
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
   |

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:29:5
   |
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
   |     ^^^^^^^^^^^
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
31 |     reveal_type(incorrect_ordered_dict)  # revealed: OrderedDict[Unknown, Unknown]
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:29:17
   |
27 |     reveal_type(incorrect_chain_map)  # revealed: ChainMap[Unknown, Unknown]
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
   |                 ^^^^^^^^^^^^^^^^^^^^^^ `defaultdict[Unknown, Unknown]`
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
31 |     reveal_type(incorrect_ordered_dict)  # revealed: OrderedDict[Unknown, Unknown]
   |

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:30:5
   |
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
   |     ^^^^^^^^^^^
31 |     reveal_type(incorrect_ordered_dict)  # revealed: OrderedDict[Unknown, Unknown]
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:30:17
   |
28 |     reveal_type(incorrect_counter)  # revealed: Counter[Unknown]
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
   |                 ^^^^^^^^^^^^^^^ `deque[Unknown]`
31 |     reveal_type(incorrect_ordered_dict)  # revealed: OrderedDict[Unknown, Unknown]
   |

```

```
warning[undefined-reveal]: `reveal_type` used without importing it
  --> src/mdtest_snippet.py:31:5
   |
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
31 |     reveal_type(incorrect_ordered_dict)  # revealed: OrderedDict[Unknown, Unknown]
   |     ^^^^^^^^^^^
   |
info: This is allowed for debugging convenience but will fail at runtime
info: rule `undefined-reveal` is enabled by default

```

```
info[revealed-type]: Revealed type
  --> src/mdtest_snippet.py:31:17
   |
29 |     reveal_type(incorrect_default_dict)  # revealed: defaultdict[Unknown, Unknown]
30 |     reveal_type(incorrect_deque)  # revealed: deque[Unknown]
31 |     reveal_type(incorrect_ordered_dict)  # revealed: OrderedDict[Unknown, Unknown]
   |                 ^^^^^^^^^^^^^^^^^^^^^^ `OrderedDict[Unknown, Unknown]`
   |

```
